--- a/client/src/assets/scss/projectDataList.scss
+++ b/client/src/assets/scss/projectDataList.scss
@@ -220,6 +220,7 @@
                                             .proj_table_title_content_vertical{
                                                 color: #fff;
                                                 border: none;
+                                                font-size: 14px;
                                             }
                                         }
                                         .proj_table_body{
